--- a/app/src/main/res/layout/bs_new_lenses_fragment.xml
+++ b/app/src/main/res/layout/bs_new_lenses_fragment.xml
@@ -6,11 +6,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp">
+    <it.raffinato.dev.lensminder.utils.view.LensSwitch
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lensSwitch"
+        android:layout_marginBottom="20dp" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <include
+            android:id="@+id/leftLens"
             layout="@layout/new_lens_area"/>
+        <include
+            android:id="@+id/rightLens"
+            layout="@layout/new_lens_area"
+            android:visibility="invisible"/>
     </RelativeLayout>
     <FrameLayout
         android:layout_width="match_parent"
