--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,4 +67,10 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/secondaryColor</item>
     </style>
+
+    <style name="SwitchLabel" parent="BoldTextView">
+        <item name="android:gravity">center</item>
+        <item name="android:lines">2</item>
+        <item name="android:layout_margin">4dp</item>
+    </style>
 </resources>
