Add stock tracking logic

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -175,16 +175,31 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             android:text="Stocks"/>
-                        <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/stocksIcon"
+                        <RelativeLayout
                             android:layout_width="0dp"
                             android:layout_height="0dp"
-                            app:srcCompat="@drawable/ic_nodata"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintDimensionRatio="W, 3:5"/>
+                            app:layout_constraintDimensionRatio="W, 3:5">
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/stocksIcon"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:srcCompat="@drawable/ic_nodata" />
+                            <FrameLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/frameLayoutStockNumber"
+                                android:visibility="gone">
+                                <com.google.android.material.textview.MaterialTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:id="@+id/stockNumber"/>
+                            </FrameLayout>
+                    </RelativeLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </com.google.android.material.card.MaterialCardView>
                 <com.google.android.material.card.MaterialCardView
