Fix stock number

--- a/app/src/main/res/navigation/activity_main_nav.xml
+++ b/app/src/main/res/navigation/activity_main_nav.xml
@@ -42,7 +42,6 @@
         android:label="BSStocksFragment" >
         <argument
             android:name="stockNumber"
-            app:argType="integer"
-            android:defaultValue="0" />
+            app:argType="integer" />
     </dialog>
 </navigation>
