prima implemementazione viewpager

--- a/app/src/main/res/layout/bs_new_lenses_fragment.xml
+++ b/app/src/main/res/layout/bs_new_lenses_fragment.xml
@@ -10,8 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lensSwitch"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginBottom="20dp"/>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
     <RelativeLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <include
