--- a/app/src/main/res/layout/bs_stocks_fragment.xml
+++ b/app/src/main/res/layout/bs_stocks_fragment.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp">
     <!-- Titolo di pannello -->
     <com.google.android.material.textview.MaterialTextView
+        style="@style/GridCardTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:padding="8dp"
-        android:text="Aggiungi il dio"
-        style="@style/GridCardTitle" />
+        android:text="Aggiungi il dio" />
+
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/case_lenses_remaining"
         android:layout_width="wrap_content"
@@ -23,26 +23,29 @@
         android:cursorVisible="false"
         android:inputType="number"
         android:padding="4dp"
+        android:selectAllOnFocus="true"
         android:textColor="@color/secondaryColor"
-        android:textSize="30sp"
-        android:selectAllOnFocus="true"/>
+        android:textSize="30sp" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp">
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/case_reset"
+            style="@style/SaveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:text="Reset"
-            style="@style/SaveButton"/>
+            android:text="Reset" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/case_save"
+            style="@style/SaveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:text="Save"
-            style="@style/SaveButton"/>
+            android:text="Save" />
     </RelativeLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
