--- a/app/src/main/res/layout/lens_switch_layout.xml
+++ b/app/src/main/res/layout/lens_switch_layout.xml
@@ -6,17 +6,19 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal">
+
     <it.raffinato.dev.lensminder.utils.view.SwitchItem
         android:id="@+id/left"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
-        app:text="Lente\nSinistra"
-        app:selected="true"/>
+        app:selected="true"
+        app:text="Lente\nSinistra" />
+
     <it.raffinato.dev.lensminder.utils.view.SwitchItem
         android:id="@+id/right"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
-        app:text="Lente\nDestra"/>
+        app:text="Lente\nDestra" />
 </androidx.appcompat.widget.LinearLayoutCompat>
