--- a/app/src/main/res/layout/bs_new_lenses_fragment.xml
+++ b/app/src/main/res/layout/bs_new_lenses_fragment.xml
@@ -1,58 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp">
+
     <it.raffinato.dev.lensminder.utils.view.LensSwitch
+        android:id="@+id/lensSwitch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lensSwitch"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp" />
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
     <RelativeLayout
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="gone">
+
         <include
             android:id="@+id/leftLens"
-            layout="@layout/new_lens_area"/>
+            layout="@layout/new_lens_area" />
+
         <include
             android:id="@+id/rightLens"
             layout="@layout/new_lens_area"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
     </RelativeLayout>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end">
+
             <com.google.android.material.button.MaterialButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/saveButton"
-                android:text="Salva"
                 style="@style/SaveButton"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-            <com.github.ybq.android.spinkit.SpinKitView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Salva"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.github.ybq.android.spinkit.SpinKitView
                 android:id="@+id/progressBar"
                 style="@style/SpinKitView.Small.DoubleBounce"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
                 app:SpinKit_Color="@color/secondaryColor"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:visibility="gone"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
