--- a/app/src/main/res/layout/lenses_area.xml
+++ b/app/src/main/res/layout/lenses_area.xml
@@ -1,76 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     android:padding="20dp">
     <!-- LX Lens -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lx_lens_area"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center_vertical|end"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/rx_lens_area"
-        android:gravity="center_vertical|end">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/wave_lx_card"
             android:layout_width="30dp"
             android:layout_height="100dp"
             android:layout_margin="8dp"
-            app:strokeColor="#3C8b91ff"
             app:cardCornerRadius="9dp"
-            app:layout_constraintStart_toEndOf="@id/lx_constraint"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/lx_constraint"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:strokeColor="#3C8b91ff">
+
             <com.gelitenight.waveview.library.WaveView
                 android:id="@+id/wave_lx"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
         </com.google.android.material.card.MaterialCardView>
+
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/lx_constraint"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
-            android:id="@+id/lx_constraint"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/wave_lx_card"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
             <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/lx_label"
                 style="@style/BoldTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:gravity="end"
-                android:textAlignment="viewEnd"
                 android:text="@string/lensArea_lxLabel"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                android:textAlignment="viewEnd"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:gravity="end|center_vertical"
+                android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
+
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/lx_countdown"
+                    style="@style/BoldTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/BoldTextView"
-                    android:textSize="32sp"
-                    android:text="@string/lensArea_countdownPlaceholder"/>
+                    android:text="@string/lensArea_countdownPlaceholder"
+                    android:textSize="32sp" />
+
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/lx_eta"
+                    style="@style/DefaultTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/DefaultTextView"
-                    android:textSize="12sp"
-                    android:text="@string/lensArea_ETAPlaceholder"/>
+                    android:text="@string/lensArea_ETAPlaceholder"
+                    android:textSize="12sp" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -79,65 +86,72 @@
         android:id="@+id/rx_lens_area"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center_vertical|start"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/lx_lens_area"
         app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center_vertical|start">
+        app:layout_constraintStart_toEndOf="@id/lx_lens_area"
+        app:layout_constraintTop_toTopOf="parent">
+
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/wave_rx_card"
             android:layout_width="30dp"
             android:layout_height="100dp"
             android:layout_margin="8dp"
-            app:strokeColor="#3C8b91ff"
             app:cardCornerRadius="9dp"
-            android:id="@+id/wave_rx_card"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rx_constraint"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:strokeColor="#3C8b91ff">
+
             <com.gelitenight.waveview.library.WaveView
                 android:id="@+id/wave_rx"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
         </com.google.android.material.card.MaterialCardView>
+
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/rx_constraint"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layout_margin="8dp"
-            android:id="@+id/rx_constraint"
-            app:layout_constraintStart_toEndOf="@id/wave_rx_card"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintStart_toEndOf="@id/wave_rx_card"
+            app:layout_constraintTop_toTopOf="parent">
+
             <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/rx_label"
                 style="@style/BoldTextView"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lensArea_rxLabel"
                 app:layout_constraintStart_toStartOf="parent"
-                android:text="@string/lensArea_rxLabel"/>
+                app:layout_constraintTop_toTopOf="parent" />
+
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
+
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/rx_countdown"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     style="@style/BoldTextView"
-                    android:textSize="32sp"
-                    android:text="@string/lensArea_countdownPlaceholder"/>
-                <com.google.android.material.textview.MaterialTextView
-                    android:text="@string/lensArea_ETAPlaceholder"
-                    android:id="@+id/rx_eta"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/lensArea_countdownPlaceholder"
+                    android:textSize="32sp" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/rx_eta"
                     style="@style/DefaultTextView"
-                    android:textSize="12sp"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/lensArea_ETAPlaceholder"
+                    android:textSize="12sp" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
