--- a/app/src/main/res/layout/new_lens_area.xml
+++ b/app/src/main/res/layout/new_lens_area.xml
@@ -1,42 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
     <com.google.android.material.textview.MaterialTextView
+        style="@style/Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         android:labelFor="@+id/datepicker"
-        style="@style/Label"
-        android:text="Open date"
-        android:layout_marginBottom="4dp"/>
+        android:text="Open date" />
+
     <com.github.badoualy.datepicker.DatePickerTimeline
         android:id="@+id/datepicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        app:mti_followScroll="false"
-        app:mti_tabSelectedColor="@color/secondaryLightColor"
-        app:mti_lblDayColor="@color/primaryDarkColor"
-        app:mti_tabBeforeSelectionColor="@color/primaryDarkColor"
-        app:mti_primaryColor="@android:color/transparent"
-        app:mti_lblDateColor="@color/primaryTextColor"
+        android:layout_marginBottom="4dp"
         app:mti_bkgTimelineColor="@android:color/transparent"
-        app:mti_yearOnNewLine="false"
-        app:mti_yearDigitCount="0"/>
+        app:mti_followScroll="false"
+        app:mti_lblDateColor="@color/primaryTextColor"
+        app:mti_lblDayColor="@color/primaryDarkColor"
+        app:mti_primaryColor="@android:color/transparent"
+        app:mti_tabBeforeSelectionColor="@color/primaryDarkColor"
+        app:mti_tabSelectedColor="@color/secondaryLightColor"
+        app:mti_yearDigitCount="0"
+        app:mti_yearOnNewLine="false" />
+
     <com.google.android.material.textview.MaterialTextView
+        style="@style/Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         android:labelFor="@+id/spinner"
-        style="@style/Label"
-        android:text="Type"
-        android:layout_marginBottom="4dp"/>
+        android:text="Type" />
+
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/primaryTextColor"/>
+        android:backgroundTint="@color/primaryTextColor" />
 </androidx.appcompat.widget.LinearLayoutCompat>
