--- a/app/src/main/res/navigation/activity_main_nav.xml
+++ b/app/src/main/res/navigation/activity_main_nav.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main_nav"
@@ -9,7 +8,7 @@
         android:id="@+id/homeFragment"
         android:name="it.raffinato.dev.lensminder.ui.home.HomeFragment"
         android:label="home_fragment"
-        tools:layout="@layout/home_fragment" >
+        tools:layout="@layout/home_fragment">
         <action
             android:id="@+id/action_homeFragment_to_storeFragment"
             app:destination="@id/storeFragment" />
@@ -32,17 +31,17 @@
         android:id="@+id/BSNewLensesFragment"
         android:name="it.raffinato.dev.lensminder.ui.newlenses.BSNewLensesFragment"
         android:label="bs_new_lenses_fragment"
-        tools:layout="@layout/bs_new_lenses_fragment" >
+        tools:layout="@layout/bs_new_lenses_fragment">
         <argument
             android:name="model"
+            android:defaultValue="@null"
             app:argType="it.raffinato.dev.lensminder.utils.LensesWrapper"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:nullable="true" />
     </dialog>
     <dialog
         android:id="@+id/BSStocksFragment"
         android:name="it.raffinato.dev.lensminder.ui.stocks.BSStocksFragment"
-        android:label="BSStocksFragment" >
+        android:label="BSStocksFragment">
         <argument
             android:name="stockNumber"
             app:argType="integer" />
