--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -137,7 +137,7 @@
 
                             <androidx.appcompat.widget.AppCompatImageView
                                 android:id="@+id/shopIcon"
-                                android:layout_width="0dp"
+                                android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:scaleType="fitEnd"
                                 app:layout_constraintBottom_toBottomOf="parent"
@@ -226,7 +226,7 @@
 
                             <androidx.appcompat.widget.AppCompatImageView
                                 android:id="@+id/historyIcon"
-                                android:layout_width="0dp"
+                                android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:scaleType="fitEnd"
                                 app:layout_constraintBottom_toBottomOf="parent"
