--- a/app/src/main/res/layout/ts_user_info_fragment.xml
+++ b/app/src/main/res/layout/ts_user_info_fragment.xml
@@ -2,10 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/topSheet"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
-    android:transitionName="shared_element_container">
-
+    android:layout_height="300dp">
     <TextView
+        android:id="@+id/ddd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
